feat: user balance implementation
